Make sure custom controls have z-index 0

--- a/src/scss/cs/forms.scss
+++ b/src/scss/cs/forms.scss
@@ -79,3 +79,6 @@ input[type=text], input[type=search] {
   }
 }
 
+.custom-control {
+  z-index: 0;
+}
